- STREL-154 adjust active window size depending on neighboring sequences
- STREL-188 haplotype generation includes soft-clipped reads
v2.6.0
- STREL-163 Update germline EVS model training with ambiguous call handling
- STREL-122/STARKA-454 Updated somatic scoring model, integrate somatic indel EVS model
- STREL-175 restore somatic callability tract
- STREL-155 determine indel candidacy in active regions
- STREL-75 fix sample limit in pedicure
- STREL-118 relax MMDF using short haplotyping
v2.5.0
- STREL-138 adjust indel theta based on hpol context in germline model
- STREL-124 integrate new RF scoring model for germline variants
- STREL-128 correctly call overlapping same pos/same length insertions
- STARKA-371 enforce indel normalization on vcf input
- STARKA-372 prototype RNA-Seq support
- STREL-50 add active region detection and short haplotype enumeration
- STREL-103 add new diplotype model for germline indels
- STREL-111 Updated somatic EVS model to support liquid tumor and bwamem bams
- STREL-116 fix germline MQ/MQ0, EVS feature norm, add new EVS dev features
- STREL-104 provide corrected germline MQ/MQ0, EVS feature norm and exome support
- STREL-101 update to simplified log-linear indel error rates
- STREL-97 use EVSF field to report all variant scoring features for germline model
- STREL-47 add new basecall error estimator
- STREL-54 fix realignment tree pruning
- STREL-33 add method docs for the new somatic scoring model
- STREL-49 Liquid tumor EVS cut-off retuning
- PED-42 Filtering model for SNV and Indels, De novo filter tunning, Better indel overlap handeling
- STREL-18 add new indel error estimator
- STREL-46 fix ALT matches REF error in somatic SNV output
- STREL-43 add new hts file stream merger
- STREL 32 left-shift/standardize input alignment records
- STARKA-403 change somatic SNV/indel scoring model for liquid tumor support
- STREL-36 fix indel breakend support test
- STREL-29 fix edge-case handling of overlapping indel candidate/forcedGT input