@@ -134,14 +134,11 @@ getSequenceErrorCountsRun(
 
     SequenceErrorCountsPosProcessor sppr(opt,dopt,ref,client_io);
     starling_read_counts brc;
-    bool noRequireNormalized(false);
 
-    registerVcfList(opt.input_candidate_indel_vcf, INPUT_TYPE::CANDIDATE_INDELS, readHeader, streamData);
-    registerVcfList(opt.input_candidate_indel_vcf_no_error, INPUT_TYPE::CANDIDATE_INDELS, readHeader,
+    static const bool noRequireNormalized(false);
+    registerVcfList(opt.input_candidate_indel_vcf, INPUT_TYPE::CANDIDATE_INDELS, readHeader,
                     streamData, noRequireNormalized);
     registerVcfList(opt.force_output_vcf, INPUT_TYPE::FORCED_GT_VARIANTS, readHeader, streamData);
-    registerVcfList(opt.force_output_vcf_no_error, INPUT_TYPE::FORCED_GT_VARIANTS, readHeader,
-                    streamData, noRequireNormalized);
 
     if (! opt.knownVariantsFile.empty())
     {
