@@ -78,6 +78,17 @@ template <> inline index_t getStreamType<bed_streamer>()
 {
     return BED;
 }
+
+template <typename T>
+T* htsTypeFactory(const char* name, const char* region, const bool /*unused*/)
+{
+    return new T(name, region);
+}
+template <>
+inline vcf_streamer* htsTypeFactory(const char* name, const char* region, const bool isRequreNormalized)
+{
+    return new vcf_streamer(name, region, isRequreNormalized);
+}
 }
 
 
@@ -111,9 +122,9 @@ struct HtsMergeStreamer
     registerVcf(
         const char* vcfFilename,
         const unsigned index = 0,
-        const bool requireNormalized = true)
+        const bool isRequireNormalized = true)
     {
-        return registerVcfType(vcfFilename,index,_data._vcf,requireNormalized);
+        return registerHtsType(vcfFilename,index,_data._vcf, isRequireNormalized);
     }
 
     const bed_streamer&
@@ -260,33 +271,17 @@ private:
     registerHtsType(
         const char* htsFilename,
         const unsigned index,
-        std::vector<std::unique_ptr<T>>& htsStreamerVec)
+        std::vector<std::unique_ptr<T>>& htsStreamerVec,
+        const bool isRequireNormalized = false)
     {
         static const HTS_TYPE::index_t htsType(HTS_TYPE::getStreamType<T>());
         assert(! _isStreamBegin);
         const unsigned htsTypeIndex(htsStreamerVec.size());
         const unsigned orderIndex(_order.size());
-        htsStreamerVec.emplace_back(new T(htsFilename, getRegionPtr()));
+        htsStreamerVec.emplace_back(HTS_TYPE::htsTypeFactory<T>(htsFilename, getRegionPtr(), isRequireNormalized));
         _order.emplace_back(htsType, index, htsTypeIndex);
         queueItem(orderIndex);
         return *(htsStreamerVec.back());
-    }
-
-    const vcf_streamer&
-    registerVcfType(
-        const char* vcfFilename,
-        const unsigned index,
-        std::vector<std::unique_ptr<vcf_streamer>>& vcfStreamerVec,
-        const bool requireNormalized)
-    {
-        static const HTS_TYPE::index_t htsType = HTS_TYPE::getStreamType<vcf_streamer>();
-        assert(! _isStreamBegin);
-        const unsigned vcfIndex(vcfStreamerVec.size());
-        const unsigned orderIndex(_order.size());
-        vcfStreamerVec.emplace_back(new vcf_streamer(vcfFilename, getRegionPtr(), requireNormalized));
-        _order.emplace_back(htsType, index, vcfIndex);
-        queueItem(orderIndex);
-        return *(vcfStreamerVec.back());
     }
 
     const OrderData&
