@@ -120,10 +120,7 @@ def callGenomeSegment(self, gseg, segFiles, taskPrefix="", dependencies=None) :
             segCmd.extend([arg, val])
 
     addListCmdOption(self.params.indelCandidatesList, '--candidate-indel-input-vcf')
-    addListCmdOption(self.params.indelCandidatesNoErrorList,
-                     '--candidate-indel-input-vcf-no-error')
     addListCmdOption(self.params.forcedGTList, '--force-output-vcf')
-    addListCmdOption(self.params.forcedGTNoErrorList, '--force-output-vcf-no-error')
 
     if self.params.extraCallerArguments is not None :
         for arg in self.params.extraCallerArguments.strip().split() :
